--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Tetris</string>
+    <string name="startgame">Start Game</string>
+    <string name="options">Options</string>
+    <string name="high_scores">High Scores</string>
+    <string name="version_text">version</string>
+    <string name="author_text" translatable="false">PiniponSelvagem</string>
 </resources>
